Update and rename src/main/resources/scoreboards.yml to Src/principale/risorse/scoreboards.yml

--- a/Src/principale/risorse/scoreboards.yml
+++ b/Src/principale/risorse/scoreboards.yml
@@ -22,7 +22,7 @@
 
 # This is a simple scoreboard with only the top and bottom lines animated
 simple:
-  titles: '&7&LYour&6&lServer'
+  titles: '&7&LFrontierCity'
   scores:
     13:
       - '&7&m+----------------+'
@@ -33,8 +33,8 @@ simple:
     9: '&7» &6&lHealth'
     8: '    %hearts%'
     7: ''
-    6: '&7» &6&lWorld'
-    5: '    &7%world%'
+    6: '&7» &6&lRichiedi assistenza facendo /aiuto'
+    5: '    &7%aiuto%'
     4: ''
     3: '&7» &6&lOnline Players'
     2: '    &7%online% &6players'
